BUGFIX Correct wrong size on scss

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -128,7 +128,8 @@ body {
 
             &.ac, &.auto {
                 .label {
-                    font-size: 5rem;
+                    font-weight: bold;
+                    font-size: 2.5rem;
                     text-align: center;
                     margin-top: -50%;
                 }
@@ -189,7 +190,7 @@ body {
             &.temperatures {
                 .temperatures-container {
                     width: 100%;
-                    height: 480px;
+                    height: 240px;
                     overflow-y: scroll;
 
                     .temperature {
@@ -199,7 +200,8 @@ body {
                         &[enabled='false'] {
                             color: map-get($colors, grey);
                         }
-                        font-size: 10rem;
+                        font-size: 5rem;
+                        font-weight: bold;
                         text-align: center;
                         width: 100%;
                     }
